--- a/index.html
+++ b/index.html
@@ -5,172 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ItzMrazotyaLin | Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --bg-color: #080a0c;
-            --card-bg: #111418;
-            --card-border: #2d333b;
-            --text-color: #adbac7;
-            --accent-blue: #539bf5;
-            --blue-glow: rgba(83, 155, 245, 0.15);
-            --transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        body {
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
-            padding: 60px 20px;
-        }
-
-        .nickname-link {
-            text-decoration: none;
-            margin-bottom: 25px;
-            display: inline-block;
-        }
-
-        .nickname {
-            font-family: 'Roboto Mono', monospace;
-            font-size: clamp(2.5rem, 8vw, 4rem);
-            font-weight: 700;
-            background: linear-gradient(90deg, #2b57ff, #00d4ff, #2b57ff, #00d4ff, #2b57ff);
-            background-size: 200% auto;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            animation: flow 4s linear infinite;
-        }
-
-        @keyframes flow {
-            to { background-position: 200% center; }
-        }
-
-        .lang-switcher {
-            margin-bottom: 45px;
-        }
-
-        .lang-btn {
-            background: #1c2128;
-            border: 1px solid var(--card-border);
-            color: var(--text-color);
-            padding: 10px 22px;
-            cursor: pointer;
-            font-family: 'Roboto Mono', monospace;
-            border-radius: 30px;
-            margin: 0 8px;
-            transition: var(--transition);
-        }
-
-        .lang-btn.active {
-            border-color: var(--accent-blue);
-            color: #fff;
-            box-shadow: 0 0 20px var(--blue-glow);
-        }
-
-        .account-stats {
-            width: 100%;
-            max-width: 1000px;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-            align-items: center;
-            margin-bottom: 70px;
-        }
-
-        .stats-row {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-            width: 100%;
-        }
-
-        .stats-row img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 12px;
-            border: 1px solid var(--card-border);
-        }
-
-        .works-container {
-            width: 100%;
-            max-width: 1100px;
-            text-align: center;
-        }
-
-        .works-title {
-            font-family: 'Roboto Mono', monospace;
-            font-size: 1.8rem;
-            margin-bottom: 30px;
-            color: #fff;
-        }
-
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr); /* 3 в ряд */
-            gap: 25px;
-        }
-
-        @media (max-width: 992px) { .projects-grid { grid-template-columns: repeat(2, 1fr); } }
-        @media (max-width: 650px) { .projects-grid { grid-template-columns: 1fr; } }
-
-        .project-card {
-            display: flex;
-            flex-direction: column;
-            text-decoration: none;
-            color: inherit;
-            background: var(--card-bg);
-            border: 1px solid var(--card-border);
-            border-radius: 18px;
-            padding: 30px;
-            transition: var(--transition);
-            position: relative;
-            height: 100%;
-            box-sizing: border-box;
-            max-width: 350px;
-        }
-
-        .project-card:hover {
-            transform: translateY(-8px);
-            border-color: var(--accent-blue);
-            box-shadow: 0 12px 30px rgba(0,0,0,0.4), 0 0 15px var(--blue-glow);
-        }
-
-        .project-title {
-            font-family: 'Roboto Mono', monospace;
-            font-size: 1.4rem;
-            color: #fff;
-            margin: 0 0 15px 0;
-        }
-
-        .project-desc {
-            display: flex;
-            font-size: 0.95rem;
-            line-height: 1.6;
-            color: #768390;
-            margin-bottom: 25px;
-            flex-grow: 1;
-        }
-
-        .go-btn {
-            background: var(--accent-blue);
-            color: #fff;
-            padding: 12px;
-            border-radius: 10px;
-            font-weight: 700;
-            font-size: 0.9rem;
-            text-align: center;
-            transition: 0.3s;
-        }
-
-        .project-card:hover .go-btn {
-            filter: brightness(1.2);
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./js.js"></script>
 </head>
 <body>
 
@@ -186,12 +22,6 @@
     <div class="account-stats">
         <div class="stats-row">
             <img src="https://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=ItzMrazotyaLin&theme=tokyonight" alt="Account Summary">
-        </div>
-        <div class="stats-row">
-            <img src="https://github-readme-activity-graph.vercel.app/graph?username=ItzMrazotyaLin&theme=tokyonight&area=true&hide_border=true&bg_color=111418" alt="Monthly Activity">
-        </div>
-        <div class="stats-row">
-            <img src="http://github-profile-summary-cards.vercel.app/api/cards/repos-per-language?username=ItzMrazotyaLin&theme=tokyonight" alt="Languages">
         </div>
     </div>
 
@@ -209,52 +39,7 @@
     </div>
 
     <script>
-        const COOKIE_NAME = 'iml.github.site.lang';
-
-        const translations = {
-            ru: {
-                header: "Мои работы",
-                desc1: "Сборник проектов, созданных в Gemini",
-                go: "Перейти"
-            },
-            en: {
-                header: "My Works",
-                desc1: "A collection of projects created in Gemini",
-                go: "View Project"
-            }
-        };
-
-        function setCookie(name, value, days) {
-            const d = new Date();
-            d.setTime(d.getTime() + (days*24*60*60*1000));
-            document.cookie = `${name}=${value};expires=${d.toUTCString()};path=/;SameSite=Lax`;
-        }
-
-        function getCookie(name) {
-            const value = `; ${document.cookie}`;
-            const parts = value.split(`; ${name}=`);
-            if (parts.length === 2) return parts.pop().split(';').shift();
-        }
-
-        function applyLanguage(lang) {
-            document.getElementById('works-header').innerText = translations[lang].header;
-            document.getElementById('desc-1').innerText = translations[lang].desc1;
-            document.getElementById('btn-text-1').innerText = translations[lang].go;
-            
-            document.getElementById('btn-ru').classList.toggle('active', lang === 'ru');
-            document.getElementById('btn-en').classList.toggle('active', lang === 'en');
-            document.documentElement.lang = lang;
-        }
-
-        function setLanguage(lang) {
-            setCookie(COOKIE_NAME, lang, 365);
-            applyLanguage(lang);
-        }
-
-        window.onload = () => {
-            const savedLang = getCookie(COOKIE_NAME) || 'ru';
-            applyLanguage(savedLang);
-        };
+       
     </script>
 </body>
 </html>
