--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="account-stats">
         <div class="stats-row">
-            <img src="http://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=ItzMrazotyaLin&theme=algolia" alt="Account Summary">
+            <img src="https://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=ItzMrazotyaLin&theme=algolia" alt="Account Summary">
         </div>
     </div>
 
